--- a/项目实训/rainbow1/app/src/main/AndroidManifest.xml
+++ b/项目实训/rainbow1/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:name=".App">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -33,7 +34,6 @@
         <activity android:name=".AccountAndSafetyActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".ChangeActivity" />
-        <activity android:name=".FindBackPwdActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".NumLoginActivity" />
