--- a/项目实训/rainbow1/app/build.gradle
+++ b/项目实训/rainbow1/app/build.gradle
@@ -39,6 +39,19 @@ MobSDK {
 }
 
 android {
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+    signingConfigs {
+        config {
+            keyAlias 'key'
+            keyPassword '123456'
+            storeFile file('F:/3u/PracticalTraining/prj/keystore.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.msl.rainbow1"
@@ -57,52 +70,40 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.jaeger.statusbaruitl:library:1.0.0'
     //智能刷新
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-12'
-
     //glide
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.6.1'
-
     //城市选择器
     implementation 'liji.library.dev:citypickerview:1.1.0'
-
     implementation 'com.android.support:design:28.0.0'
-
     //时间选择器
     implementation 'com.contrarywind:Android-PickerView:3.2.7'
-
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
-
     //轮播图依赖
     implementation 'com.hejunlin.superindicatorlibray:superindicatorlibray:1.0.3'
     //流式布局
     implementation 'com.github.LRH1993:AutoFlowLayout:1.0.5'
-
     //动图
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
-
     //点赞动画
     implementation 'com.zhuang:likeview:2.0'
-
     //图片选择器
     implementation 'com.github.open-android:ImageSelector:0.1.0'
-
     //屏幕适配
     implementation 'me.yatoooon:screenadaptation:1.0.8'
-
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation files('libs/BaiduLBS_Android.jar')
 }
 
 configurations.all {
@@ -115,4 +116,3 @@ configurations.all {
         }
     }
 }
-
